# maldroid

./: .gitignore  ADDING_TOOLS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DEVELOPMENT.md  LICENSE  NEXT_AGENT_MASTER_PLAN.md  NEXT_STEPS.md  PLAYBOOKS.md  PROJECT_STATUS.md  README.md  SECURITY.md  SYSTEM_PROMPT.md  TOOLS.md  Tasks.MD  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: CLI.md  WEB.md
docs/adr/: 0001-security-and-tool-execution.md  0002-execution-threat-model.md  0002-mcp-tool-transport.md  0008-optional-loopback-model-auth.md  0009-owner-controlled-llama-host-tools.md  0010-decouple-checkpoints-from-compaction.md  0011-persistent-external-mcp-connectors.md  0012-canonical-state-persistence-invariants.md  0012-semantic-research-memory-and-context.md  0013-shared-cli-web-runtime.md  0014-explicit-transactional-self-update.md  0015-streaming-repetition-recovery.md  0016-cooperative-web-turn-cancellation.md  0017-single-pass-observable-model-turns.md  0018-bound-long-running-runtime-work.md  0019-cli-speed-and-dynamic-tool-catalog.md  0020-static-code-intake-and-review-only-python.md
docs/handoffs/: CURRENT.md
docs/handoffs/archive/: 2026-07-14-cli-release-workflow.md  2026-07-14-mcp-fixed-port.md  2026-07-14-publication.md  2026-07-14-v1-implementation.md
docs/research/: RESEARCH_MATRIX.md  TOOL_COMPATIBILITY.md
knowledge/android/: code-obfuscation-and-decoder-scripts.md  evidence-handling.md  general-static-analysis.md
knowledge/cocos/: script-artifact-analysis.md
knowledge/cordova/: javascript-and-bridge-analysis.md
knowledge/flutter/: blutter-workflow.md
knowledge/native/: elf-static-analysis.md  ghidra-mcp-investigation-methodology.md
knowledge/react-native/: hermes-artifacts.md  investigation-methodology.md  large-bundle-investigation.md  metro-bundle-workflow.md
knowledge/unity/: artifact-identification.md
scripts/: bootstrap-dev.sh  build-release.sh  check_project_hygiene.py  dev  release-check.sh
src/maldroid/: __init__.py  agent.py  case_manager.py  cli.py  code_intake.py  config.py  constants.py  evidence_manager.py  exceptions.py  external_mcp.py  investigation.py  io_utils.py  knowledge_manager.py  large_files.py  llama_adapter.py  llama_client.py  logging_config.py  mcp_server.py  models.py  paths.py  process_manager.py  profile_detection.py  profiles.py  prompts.py  runtime.py  runtime_lock.py  session_manager.py  speed.py  ui.py  updater.py
src/maldroid/tools/: dispatcher.py  models.py  registry.py
src/maldroid/tools/core/: builtin.py  code_analysis.py  research.py  scripts.py  transforms.py  triage.py
src/maldroid/tools/profiles/: common.py  frameworks.py  native.py  react_native.py
src/maldroid/web/: __init__.py  server.py
src/maldroid/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_agent_durability.py  test_cases_evidence.py  test_cli_cases.py  test_cli_process_installer.py  test_code_analysis.py  test_config.py  test_external_mcp.py  test_framework_profiles.py  test_large_react_native.py  test_llama_adapter.py  test_llama_client.py  test_mcp_server.py  test_profile_detection.py  test_rel010_finding_regression.py  test_rel015_idempotency.py  test_rel020_migration.py  test_research_tools.py  test_runtime.py  test_tools_agent.py  test_tools_scripts.py  test_triage_tools.py  test_ui.py  test_updater.py  test_web_workspace.py
