[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maldroid"
version = "0.1.0"
description = "A local static-analysis assistant for Android malware research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MalDroid contributors" }]
keywords = ["android", "static-analysis", "mcp", "reverse-engineering", "llama.cpp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
]
dependencies = [
  "defusedxml>=0.7",
  "filelock>=3.13",
  "mcp>=1.26,<2",
  "openai>=1.40",
  "platformdirs>=4.2",
  "prompt-toolkit>=3.0.48",
  "psutil>=5.9",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
  "types-defusedxml>=0.7",
]

[project.scripts]
maldroid = "maldroid.cli:entrypoint"

[project.urls]
Homepage = "https://github.com/yayaya142/maldroid"
Documentation = "https://github.com/yayaya142/maldroid/blob/main/docs/CLI.md"
Issues = "https://github.com/yayaya142/maldroid/issues"
Source = "https://github.com/yayaya142/maldroid"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maldroid = ["py.typed"]

[tool.setuptools.data-files]
"share/maldroid/knowledge/android" = ["knowledge/android/*.md"]
"share/maldroid/knowledge/react-native" = ["knowledge/react-native/*.md"]
"share/maldroid/knowledge/flutter" = ["knowledge/flutter/*.md"]
"share/maldroid/knowledge/unity" = ["knowledge/unity/*.md"]
"share/maldroid/knowledge/cordova" = ["knowledge/cordova/*.md"]
"share/maldroid/knowledge/cocos" = ["knowledge/cocos/*.md"]
"share/maldroid/knowledge/native" = ["knowledge/native/*.md"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = ["integration: requires local external software or a real model"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
packages = ["maldroid"]
warn_unused_ignores = true
check_untyped_defs = true
